--- a/index.html
+++ b/index.html
@@ -108,9 +108,175 @@
       </div>
     </section>
 
-    <p>Hello World!!!</p>
-
     <!-- about section end -->
+
+    <!-- service section start -->
+
+    <section class="service" id="service">
+      <h2 class="heading">
+        <i class="fa-solid fa-caret-right"></i>Our services<i
+          class="fa-solid fa-caret-left"
+        ></i>
+      </h2>
+
+      <div class="box-container">
+        <div class="box">
+          <i class="fa-solid fa-house"></i>
+          <h3>Home pickup</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            laudantium, eveniet aliquam aspernatur, suscipit placeat excepturi
+            quam sequi libero ad vel. Hic porro sed atque.
+          </p>
+        </div>
+
+        <div class="box">
+          <i class="fa-solid fa-location-dot"></i>
+          <h3>GPS Serching</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            laudantium, eveniet aliquam aspernatur, suscipit placeat excepturi
+            quam sequi libero ad vel. Hic porro sed atque.
+          </p>
+        </div>
+
+        <div class="box">
+          <i class="fa-solid fa-dollar-sign"></i>
+          <h3>Bonuses for ride</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            laudantium, eveniet aliquam aspernatur, suscipit placeat excepturi
+            quam sequi libero ad vel. Hic porro sed atque.
+          </p>
+        </div>
+
+        <div class="box">
+          <i class="fa-solid fa-person-running"></i>
+          <h3>Fast booking</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            laudantium, eveniet aliquam aspernatur, suscipit placeat excepturi
+            quam sequi libero ad vel. Hic porro sed atque.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- service section end -->
+
+    <!-- cars section start -->
+
+    <section class="cars" id="cars">
+      <h2 class="heading">
+        <i class="fa-solid fa-caret-right"></i>Our cars<i
+          class="fa-solid fa-caret-left"
+        ></i>
+      </h2>
+
+      <div class="box-container">
+        <div class="box">
+          <h3>Taxi</h3>
+          <img src="img/taxi_car.png" alt="taxi" />
+          <h4>The taxi you know</h4>
+          <ul>
+            <li>Price based on taximeter</li>
+            <li>Executed by local taxi fleets</li>
+            <li>Online and offline payment</li>
+            <li>24/7 support hotline</li>
+          </ul>
+        </div>
+
+        <div class="box">
+          <h3>Econom+</h3>
+          <img src="img/taxi_car.png" alt="taxi" />
+          <h4>For budget travelers</h4>
+          <ul>
+            <li>Price based on taximeter</li>
+            <li>Executed by local taxi fleets</li>
+            <li>Online and offline payment</li>
+            <li>24/7 support hotline</li>
+            <li>English-speaking driver</li>
+            <li>45 minutes waiting time after landing</li>
+            <li>Pickup with name sign in arrivals hall</li>
+          </ul>
+        </div>
+
+        <div class="box">
+          <h3>Business Class</h3>
+          <img src="img/taxi_car.png" alt="taxi" />
+          <h4>Business traveler's</h4>
+          <ul>
+            <li>Price based on taximeter</li>
+            <li>Executed by local taxi fleets</li>
+            <li>Online and offline payment</li>
+            <li>24/7 support hotline</li>
+            <li>English-speaking driver</li>
+            <li>45 minutes waiting time after landing</li>
+            <li>Pickup with name sign in arrivals hall</li>
+            <li>Children seats available on request</li>
+            <li>Online and offline payment</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- cars section end -->
+
+    <!-- contacts section start -->
+
+    <section class="contacts" id="contacts">
+      <h2 class="heading">
+        <i class="fa-solid fa-caret-right"></i>Contacts Us<i
+          class="fa-solid fa-caret-left"
+        ></i>
+      </h2>
+
+      <div class="box-container">
+        <div class="content">
+          <h3>BEST IN CITY</h3>
+          <h2>To Book Taxi Please Use The Quick Reservation Form</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro id at
+            ab error dolore quisquam molestias pariatur tempora quas fugiat?
+            Dolorem aperiam excepturi expedita doloribus dignissimos alias
+            quaerat, ut ipsam ex quo, sapiente minima voluptatum iure officia
+            consequatur nulla ipsum sit suscipit amet autem dolores obcaecati
+            blanditiis labore. Commodi, ratione.
+          </p>
+          <button class="btn">Submit</button>
+        </div>
+
+        <div class="form">
+          <input type="text" required placeholder="Enter your name" />
+          <input
+            type="text"
+            required
+            placeholder="Enter your phone (+123-45-678-900)"
+          />
+          <textarea
+            cols="30"
+            rows="10"
+            placeholder="Enter your message"
+          ></textarea>
+          <button class="btn">Submit</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- contacts section end -->
+
+    <!-- footer section start -->
+
+    <section class="footer">
+      <div class="social-media">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-telegram"></i>
+      </div>
+    </section>
+
+    <!-- footer section end -->
 
     <script>
       let menu = document.querySelector(".fa-bars");
@@ -124,5 +290,3 @@
     </script>
   </body>
 </html>
-
-Закончил просмотр на 47:53 минут
